# OpenDOGE

./: .env.example  .gitignore  Dockerfile  README.md  STRATEGY.md  TODO.md  alembic.ini  app.yaml  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  requirements.txt  setup.py
OpenDOGE/: requirements.txt
OpenDOGE/app/: main.py
OpenDOGE/app/api/endpoints/: analytics.py  spending.py
OpenDOGE/app/core/: database.py
OpenDOGE/app/services/scrapers/: usaspending.py
OpenDOGE/scripts/: collect_data.py
alembic/: env.py
alembic/versions/: 001_create_awards_table.py  002_add_government_data_tables.py  initial_migration.py
app/: main.py
app/api/v1/: government_data.py  treasury.py  usaspending.py
app/core/: cache.py  config.py  logger.py
app/db/: session.py
app/models/: awards.py  database.py  government_data.py
app/models/schemas/: spending.py
app/services/ai/: smart_search.py
app/services/scrapers/: data_collector.py  data_sources.py  treasury.py  usaspending.py
app/templates/: contract_details.html  usaspending.html
nginx/conf.d/: opendoge.conf
scripts/: demo_usaspending.py  deploy.sh  droplet_deploy.sh  run_collector.py  setup_droplet.sh  test_deployment.py
scripts/cron/: collect_daily.sh
tests/: test_api_connections.py
